Adding top level files to check links and paths

--- a/index.html
+++ b/index.html
@@ -1,5 +1,69 @@
-<html>
-<body>
-<p>Testing Github pages</p>
-</body>
-</html>
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
+<HTML>
+<HEAD>
+<META http-equiv="Content-Type" CONTENT="text/html; charset=iso-8859-1">
+<META NAME="keywords" CONTENT="Miamisburg, Krug, railroad, BN, BNSF, Penn Central, Burlington Northern, Sheridan">
+<META NAME="description" CONTENT="Railroad related material. Train forces calculator, RR and Sheridan WY area photos.">
+<META NAME="robots" CONTENT="NOFOLLOW">
+<TITLE>Krug's Home Page</TITLE>
+</HEAD>
+<BODY>
+
+<H1>
+<CENTER>Al Krug's home page</CENTER>
+</H1>
+
+<CENTER>
+<TABLE BORDER=1 CELLPADDING="6">
+<TR>
+<TD><a HREF="rrfacts/rrfacts.htm">Railroad Facts & Figures</A></TD>
+<TD><a HREF="rrfacts/RRForcesCalc.html">RR Forces Calculator</A></TD>
+<TD><a HREF="http://KrugTales.50megs.com/rrpictale/rrpictale.htm" > RR Photo Essays</A></TD>
+</TR>
+</TABLE>
+</CENTER>
+
+<CENTER>
+<IMG SRC="sher2.jpg" alt="[Sheridan WY pic]">
+</CENTER>
+
+<H3>My History</H3>
+<UL>
+<LI>Born... well let's just say a half century ago.
+<LI>Raised in Miamisburg, OH.
+<LI>B.S. degree from Miami University, Oxford, OH.
+<LI>Four years as Locomotive Engineer for Penn Central RR in SW Ohio.
+<LI>Three years in the U.S. Army.
+	<UL>
+	<LI>13 months in Korea.
+	<LI>2 years at Redstone Arsenal (Huntsville), AL teaching radar repair and missile guidance systems. <NOBR>(Hey! He really <U><B>is</B></U> a rocket scientist).</NOBR>
+	</UL>
+<LI>34 years as Locomotive <A HREF="AAK_trains.htm"> Engineer</A>
+ for Burlington Northern (now BNSF) at Sheridan, WY.
+<LI><A HREF="AAK_engr.htm">Pictures of me</A> in 1976 and 2001.
+</UL>
+
+<P>
+<H3>My hobbies</H3>
+<UL>
+<LI>Backpacking & hiking the nearby 
+<A HREF="bighorn.htm">Bighorn Mountains</A>
+<LI>Cross country skiing and 
+<a HREF="bighorn.htm#snowshoe">snowshoeing.</A>
+<LI>
+<a HREF="krugair.jpg">Flying.</A>
+<LI>Photography.
+<LI>Woodworking.
+<LI>Electronics.
+<LI>Computers.
+</UL>
+
+<HR>
+<CENTER>
+<A HREF="homevector.htm"> E-Mail Me</A>
+</CENTER>
+
+<P ALIGN=right><FONT SIZE=-2>Created 11-01-1999</FONT><BR>
+<FONT SIZE=-2>Updated 2-09-2008</FONT></P>
+</BODY>
+</HTML>
